// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageOverview should render 1`] = `
<Connect(SettingsBasePage)
  backURL="/workspace/23/settings/data-source/add"
  className="usage-overview-page-root"
  groupId="23"
  key="UsageOverview"
  pageTitle="Current Usage Limits"
>
  <div
    className="row"
  >
    <div
      className="col-xl-8"
    >
      <div
        className="text-secondary"
      >
        <p>
          <b>
            Plans are limited by the total amount of individuals and page views.
          </b>
        </p>
        <p>
          When either limit is exceeded, the current plan will either have to be upgraded or add-ons will have to be purchased to accommodate the overage.
        </p>
      </div>
      <Card>
        <Body>
          <UsageMetric
            currentPlan={
              Immutable.Record {
                "addOns": Immutable.Map {
                  "individuals": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Contacts",
                    "quantity": 2,
                  },
                  "pageViews": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Tracked Pages",
                    "quantity": 1,
                  },
                },
                "endDate": 1531263666366,
                "metrics": Immutable.Map {
                  "individuals": Immutable.Record {
                    "count": 2057,
                    "limit": 105000,
                    "status": 0,
                  },
                  "pageViews": Immutable.Record {
                    "count": 100023,
                    "limit": 7000000,
                    "status": 0,
                  },
                },
                "name": "Liferay Analytics Cloud Enterprise",
                "startDate": 1531090866366,
              }
            }
            metricType="individuals"
            planType="enterprise"
            timeZoneId="UTC"
          />
          <UsageMetric
            currentPlan={
              Immutable.Record {
                "addOns": Immutable.Map {
                  "individuals": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Contacts",
                    "quantity": 2,
                  },
                  "pageViews": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Tracked Pages",
                    "quantity": 1,
                  },
                },
                "endDate": 1531263666366,
                "metrics": Immutable.Map {
                  "individuals": Immutable.Record {
                    "count": 2057,
                    "limit": 105000,
                    "status": 0,
                  },
                  "pageViews": Immutable.Record {
                    "count": 100023,
                    "limit": 7000000,
                    "status": 0,
                  },
                },
                "name": "Liferay Analytics Cloud Enterprise",
                "startDate": 1531090866366,
              }
            }
            metricType="pageViews"
            planType="enterprise"
            timeZoneId="UTC"
          />
        </Body>
      </Card>
    </div>
    <div
      className="col-xl-4 plans"
    >
      <div>
        <h4>
          Plans
        </h4>
        <div
          className="text-secondary"
        >
          <p>
            Balance pricing and value. Higher tiers offer more flexibility through cheaper add-ons and higher limits.
          </p>
        </div>
        <PlansList
          currentPlanName="Liferay Analytics Cloud Enterprise"
          plans={
            Array [
              Object {
                "baseSubscriptionPlan": null,
                "limits": Object {
                  "individuals": 100000,
                  "pageViews": 60000000,
                },
                "name": "Liferay Analytics Cloud Enterprise",
                "price": 20000,
              },
            ]
          }
        />
      </div>
      <div>
        <h4>
          Add-ons
        </h4>
        <div
          className="text-secondary"
        >
          <p>
            Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
          </p>
        </div>
        <AddOnsList
          active={true}
          currentPlan={
            Immutable.Record {
              "addOns": Immutable.Map {
                "individuals": Immutable.Map {
                  "name": "Liferay Analytics Cloud Enterprise Contacts",
                  "quantity": 2,
                },
                "pageViews": Immutable.Map {
                  "name": "Liferay Analytics Cloud Enterprise Tracked Pages",
                  "quantity": 1,
                },
              },
              "endDate": 1531263666366,
              "metrics": Immutable.Map {
                "individuals": Immutable.Record {
                  "count": 2057,
                  "limit": 105000,
                  "status": 0,
                },
                "pageViews": Immutable.Record {
                  "count": 100023,
                  "limit": 7000000,
                  "status": 0,
                },
              },
              "name": "Liferay Analytics Cloud Enterprise",
              "startDate": 1531090866366,
            }
          }
          planType="enterprise"
        />
      </div>
    </div>
  </div>
</Connect(SettingsBasePage)>
`;

exports[`UsageOverview should render with a member-specific message overage warning if a metric is approaching plan limit and the user is a member role 1`] = `
<Alert
  iconSymbol="exclamation-full"
  key="pageViews"
  title="Usage Limit Approaching"
  type="warning"
>
  The current plan can only support another 
  <b
    key="pageViews"
  >
    6,899,977
  </b>
   
  page views
  . Please contact your site administrator to upgrade the plan.
</Alert>
`;

exports[`UsageOverview should render with an approaching limit warning if a metric is approaching plan limit 1`] = `
<Alert
  iconSymbol="exclamation-full"
  key="pageViews"
  title="Usage Limit Approaching"
  type="warning"
>
  The current plan can only support another 
  <b
    key="pageViews"
  >
    7,000,000
  </b>
   
  page views
  . Please contact a sales representative to upgrade the plan.
</Alert>
`;

exports[`UsageOverview should render with an overage warning if a metric has exceeded the plan limit 1`] = `
<Alert
  iconSymbol="exclamation-full"
  key="individuals"
  title="Usage Limit Exceeded"
  type="danger"
>
  The current plan's 
  <b
    key="individuals"
  >
    individuals
  </b>
   limit has been exceeded. Please contact a sales representative at the earliest convenience.
</Alert>
`;

exports[`UsageOverview should use default addons for basic plans 1`] = `
<Connect(SettingsBasePage)
  backURL="/workspace/23/settings/data-source/add"
  className="usage-overview-page-root"
  groupId="23"
  key="UsageOverview"
  pageTitle="Current Usage Limits"
>
  <div
    className="row"
  >
    <div
      className="col-xl-8"
    >
      <div
        className="text-secondary"
      >
        <p>
          <b>
            Plans are limited by the total amount of individuals and page views.
          </b>
        </p>
        <p>
          When either limit is exceeded, the current plan will either have to be upgraded or add-ons will have to be purchased to accommodate the overage.
        </p>
      </div>
      <Card>
        <Body>
          <UsageMetric
            currentPlan={
              Immutable.Record {
                "addOns": Immutable.Map {
                  "individuals": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Contacts",
                    "quantity": 2,
                  },
                  "pageViews": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Tracked Pages",
                    "quantity": 1,
                  },
                },
                "endDate": 1531263666366,
                "metrics": Immutable.Map {
                  "individuals": Immutable.Record {
                    "count": 2057,
                    "limit": 105000,
                    "status": 0,
                  },
                  "pageViews": Immutable.Record {
                    "count": 100023,
                    "limit": 7000000,
                    "status": 0,
                  },
                },
                "name": "Liferay Analytics Cloud Basic",
                "startDate": 1531090866366,
              }
            }
            metricType="individuals"
            planType="basic"
            timeZoneId="UTC"
          />
          <UsageMetric
            currentPlan={
              Immutable.Record {
                "addOns": Immutable.Map {
                  "individuals": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Contacts",
                    "quantity": 2,
                  },
                  "pageViews": Immutable.Map {
                    "name": "Liferay Analytics Cloud Enterprise Tracked Pages",
                    "quantity": 1,
                  },
                },
                "endDate": 1531263666366,
                "metrics": Immutable.Map {
                  "individuals": Immutable.Record {
                    "count": 2057,
                    "limit": 105000,
                    "status": 0,
                  },
                  "pageViews": Immutable.Record {
                    "count": 100023,
                    "limit": 7000000,
                    "status": 0,
                  },
                },
                "name": "Liferay Analytics Cloud Basic",
                "startDate": 1531090866366,
              }
            }
            metricType="pageViews"
            planType="basic"
            timeZoneId="UTC"
          />
        </Body>
      </Card>
    </div>
    <div
      className="col-xl-4 plans"
    >
      <div>
        <h4>
          Plans
        </h4>
        <div
          className="text-secondary"
        >
          <p>
            Balance pricing and value. Higher tiers offer more flexibility through cheaper add-ons and higher limits.
          </p>
        </div>
        <PlansList
          currentPlanName="Liferay Analytics Cloud Basic"
          plans={
            Array [
              Object {
                "baseSubscriptionPlan": null,
                "limits": Object {
                  "individuals": 100000,
                  "pageViews": 60000000,
                },
                "name": "Liferay Analytics Cloud Enterprise",
                "price": 20000,
              },
              Object {
                "baseSubscriptionPlan": null,
                "limits": Object {
                  "individuals": 10000,
                  "pageViews": 5000000,
                },
                "name": "Liferay Analytics Cloud Business",
                "price": 7500,
              },
              Object {
                "baseSubscriptionPlan": null,
                "limits": Object {
                  "individuals": 1000,
                  "pageViews": 300000,
                },
                "name": "Liferay Analytics Cloud Basic",
                "price": 0,
              },
            ]
          }
        />
      </div>
      <div>
        <h4>
          Add-ons
        </h4>
        <div
          className="text-secondary"
        >
          <p>
            Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
          </p>
        </div>
        <div
          className="text-secondary"
        >
          <strong>
            <p>
              Add-ons are not available on the Basic plan. To increase usage limits, please contact a sales representative.
            </p>
          </strong>
        </div>
        <AddOnsList
          active={false}
          currentPlan={
            Immutable.Record {
              "addOns": Immutable.Map {
                "individuals": Immutable.Map {
                  "name": "Liferay Analytics Cloud Enterprise Contacts",
                  "quantity": 2,
                },
                "pageViews": Immutable.Map {
                  "name": "Liferay Analytics Cloud Enterprise Tracked Pages",
                  "quantity": 1,
                },
              },
              "endDate": 1531263666366,
              "metrics": Immutable.Map {
                "individuals": Immutable.Record {
                  "count": 2057,
                  "limit": 105000,
                  "status": 0,
                },
                "pageViews": Immutable.Record {
                  "count": 100023,
                  "limit": 7000000,
                  "status": 0,
                },
              },
              "name": "Liferay Analytics Cloud Basic",
              "startDate": 1531090866366,
            }
          }
          planType="basic"
        />
      </div>
    </div>
  </div>
</Connect(SettingsBasePage)>
`;
